# file-convertor

./: .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: document_vault.py  main.py
src/convertor/: word2pdfconvertor.py
src/security/: __init__.py  virus_total.py
src/templates/: document.html  document_vault.html  index.html  operation.html  pdf_tools.html  security_check.html
supabase/: document_vault.sql
tests/: test_convertor.py  test_document_vault.py
