[project]
name = "file-convertor"
version = "0.1.0"
description = ""
authors = [
    {name = "vitor-gama-amaral",email = "vitor.gama@sempreceub.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docx2pdf (>=0.1.8,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
