[project]
name = "file-convertor"
version = "0.1.0"
description = ""
authors = [
    {name = "vitor-gama-amaral",email = "vitor.gama@sempreceub.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docx2pdf (>=0.1.8,<0.2.0)",
    "pypandoc[tinytex] (>=1.17,<2.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "docx (>=0.2.4,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.9,<0.16.0)"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = []
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
norecursedirs = [".pytest_cache", ".tmp", "tests/tmp*"]
